--- a/css/style.css
+++ b/css/style.css
@@ -57,25 +57,6 @@ body {
 .fa-times-circle {
 	margin-right: 10px;
 }
-/* <div class="info-msg">
-  <i class="fa fa-info-circle"></i>
-  This is an info message.
-</div>
-
-<div class="success-msg">
-  <i class="fa fa-check"></i>
-  This is a success message.
-</div>
-
-<div class="warning-msg">
-  <i class="fa fa-warning"></i>
-  This is a warning message.
-</div>
-
-<div class="error-msg">
-  <i class="fa fa-times-circle"></i>
-  This is a error message.
-</div> */
 
 .succes {
 	padding: 10px;
@@ -688,11 +669,13 @@ label {
 	cursor: pointer;
 }
 
-#size {
+.size,
+.color {
 	width: max-content;
 }
 
-.size-error {
+.size-error,
+.color-error {
 	display: none;
 	color: #fa2c2c;
 	font-size: 0.9rem;
